[tool.poetry]
name = "seisscan"
version = "0.1.0"
description = "A package to detect and locate microearthquakes."
authors = ["Ketan Singha Roy"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "seisscan_images" }
]

[tool.poetry.dependencies]
python = ">=3.10"
obspy = "1.4.0"
dask = ">=2024.8.0"
cartopy = ">=0.23.0"
distributed = ">=2024.8.0"
pandas = ">=2.2.2"
utm = ">=0.7.0"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.4"
pandoc = "^2.4"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^1.1.1", python = "^3.10"}
sphinx-autoapi = "^3.2.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
